<resources>
    <string name="app_name">AppGrupo03</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Formulario">Formulario</string>
    <string name="Formulario_Info">Formulario Info</string>
    <string name="Listado">Listado</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="titulo_reserva">CONFIRMA TU RESERVA</string>
    <string name="val_btn_reserva">Reservar ahora</string>
    <string name="val_hint_fin">Fecha de fin</string>
    <string name="val_hint_inicio">Fecha de inicio</string>
    <string name="title_facebook">Facebook:</string>
    <string name="title_sobre">Sobre Dan:</string>
    <string name="title_duenio">Dueño:</string>
    <string name="val_tv_direccion">Miraflores, Lima - Perú</string>
    <string name="val_tv_estado">Conectado: Ahora</string>
    <string name="val_tv_facebook">www.facebook.com/manuel</string>
    <string name="val_tv_info_perro">Dante es un cachorro mimado con una personalidad encantadora y traviesa. Criado en un hogar donde recibió todo el amor y atención, se ha convertido en el consentido de la familia. Con sus ojos brillantes y su pelaje suave, es difícil resistirse a sus encantos. Sin embargo, su mimada naturaleza a veces puede llevarlo a comportarse de manera caprichosa, demandando constantes mimos y atención. A pesar de sus travesuras, su lealtad y afecto hacia su familia son innegables, haciendo que cada día sea una aventura llena de amor y diversión</string>
    <string name="val_tv_duenio">Manuel Arturo Coronado Preciado</string>
    <string name="val_tv_nom_perro">Dan</string>
    <string name="title_listado_reservas">LISTADO DE RESERVAS</string>
    <string name="valetemail">Email</string>
    <string name="valetpassword">Password</string>
    <string name="valetid">Id</string>
</resources>